PROD_10-24-19/force-app/main/default/objects/Contact/fields/Account_Last_Updated_by__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Updated_by__c</fullName>
    <label>Account Last Updated by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>