PROD_10-24-19/force-app/main/default/objects/Contact/fields/Account_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Updated_Date__c</fullName>
    <label>Account Last Updated Date</label>
    <type>Date</type>
</CustomField>