PROD_10-24-19/force-app/main/default/objects/Contact/fields/Account_PFG_Primary_Lead__c.field-meta.xml
<CustomField>
    <fullName>Account_PFG_Primary_Lead__c</fullName>
    <description>Copy of Account PFG Primary Field to help with Data Maintenance</description>
    <formula>Account.PFG_CRM_Primary_Lead__r.FirstName &amp;&quot; &quot;&amp; Account.PFG_CRM_Primary_Lead__r.LastName</formula>
    <inlineHelpText>Copy of Account PFG Primary Field to help with Data Maintenance</inlineHelpText>
    <label>Account PFG Primary Lead</label>
    <type>Text</type>
</CustomField>