PROD_10-24-19/force-app/main/default/objects/Contact/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>AccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>