PROD_10-24-19/force-app/main/default/objects/Contact/fields/BAC_Send_Mass_Email__c.field-meta.xml
<CustomField>
    <fullName>BAC_Send_Mass_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAC Email Opt-In</label>
    <type>Checkbox</type>
</CustomField>