PROD_10-24-19/force-app/main/default/objects/Contact/fields/BAM_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>BAM_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAM Primary Contact</label>
    <type>Checkbox</type>
</CustomField>