PROD_10-24-19/force-app/main/default/objects/Contact/fields/BEP__c.field-meta.xml
<CustomField>
    <fullName>BEP__c</fullName>
    <label>BEP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buy Side</fullName>
            </value>
            <value>
                <fullName>Sell Side</fullName>
            </value>
            <value>
                <fullName>Rating Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>