PROD_10-24-19/force-app/main/default/objects/Contact/fields/BFIN_EmailOpt_Out__c.field-meta.xml
<CustomField>
    <fullName>BFIN_EmailOpt_Out__c</fullName>
    <inlineHelpText>For BFIN only emails
No=Client did not opt out of emails
Yes= Client did opt out of emails</inlineHelpText>
    <label>BFIN EmailOpt Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>