PROD_10-24-19/force-app/main/default/objects/Contact/fields/BIM_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>BIM_Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSG Key Contact</label>
    <type>Checkbox</type>
</CustomField>