PROD_10-24-19/force-app/main/default/objects/Contact/fields/BIM_Reference__c.field-meta.xml
<CustomField>
    <fullName>BIM_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if this contact can be used as a BIM Reference.</inlineHelpText>
    <label>PSG Reference</label>
    <type>Checkbox</type>
</CustomField>