PROD_10-24-19/force-app/main/default/objects/Contact/fields/BIM_Sector_Coverage__c.field-meta.xml
<CustomField>
    <fullName>BIM_Sector_Coverage__c</fullName>
    <label>PSG Sector Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Real Assets</fullName>
            </value>
            <value>
                <fullName>Hedge Funds</fullName>
            </value>
            <value>
                <fullName>REITs</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Fixed Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>