PROD_10-24-19/force-app/main/default/objects/Contact/fields/BLP_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>BLP_Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if this is the primary contact at the organization</inlineHelpText>
    <label>BLP Key Contact</label>
    <type>Checkbox</type>
</CustomField>