PROD_10-24-19/force-app/main/default/objects/Contact/fields/BRP_Owner__c.field-meta.xml
<CustomField>
    <fullName>BRP_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BRP Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts6User</relationshipName>
    <type>Lookup</type>
</CustomField>