PROD_10-24-19/force-app/main/default/objects/Contact/fields/BRP_Secondary_Account_Owners__c.field-meta.xml
<CustomField>
    <fullName>BRP_Secondary_Account_Owners__c</fullName>
    <label>BRP Secondary Account Owners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faisal</fullName>
            </value>
            <value>
                <fullName>Nizar</fullName>
            </value>
            <value>
                <fullName>Nicolas</fullName>
            </value>
            <value>
                <fullName>Jack</fullName>
            </value>
            <value>
                <fullName>Bryce</fullName>
            </value>
            <value>
                <fullName>Michael</fullName>
            </value>
            <value>
                <fullName>Andrew</fullName>
            </value>
            <value>
                <fullName>Tony</fullName>
            </value>
            <value>
                <fullName>Steven</fullName>
            </value>
            <value>
                <fullName>Ross</fullName>
            </value>
            <value>
                <fullName>Maxime</fullName>
            </value>
            <value>
                <fullName>Julie</fullName>
            </value>
            <value>
                <fullName>Alan</fullName>
            </value>
            <value>
                <fullName>Vanessa</fullName>
            </value>
            <value>
                <fullName>Daniel</fullName>
            </value>
            <value>
                <fullName>Taylor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>