PROD_10-24-19/force-app/main/default/objects/Contact/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Defines which Business Unit&#39;s lists to show in the dependent picklist</description>
    <inlineHelpText>Select your Business Unit to view the appropriate Marketing List options</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>BAM</fullName>
            </value>
            <value>
                <fullName>BAM Compliance</fullName>
            </value>
            <value>
                <fullName>BAM Finance</fullName>
            </value>
            <value>
                <fullName>BFIN</fullName>
            </value>
            <value>
                <fullName>BIG</fullName>
            </value>
            <value>
                <fullName>BLP</fullName>
            </value>
            <value>
                <fullName>BPEG</fullName>
            </value>
            <value>
                <fullName>BPFG</fullName>
            </value>
            <value>
                <fullName>BPG</fullName>
            </value>
            <value>
                <fullName>BCO</fullName>
            </value>
            <value>
                <fullName>BPY</fullName>
            </value>
            <value>
                <fullName>BRP</fullName>
            </value>
            <value>
                <fullName>PFG</fullName>
            </value>
            <value>
                <fullName>BIM</fullName>
                <label>PSG &quot;BIM&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>