PROD_10-24-19/force-app/main/default/objects/Contact/fields/Contact_Status_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_Tracker__c</fullName>
    <label>Contact Status Tracker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>