PROD_10-24-19/force-app/main/default/objects/Contact/fields/Contact_Tracker_Field_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Tracker_Field_Updated_Date__c</fullName>
    <label>Contact Tracker Field Updated Date</label>
    <type>Date</type>
</CustomField>