PROD_10-24-19/force-app/main/default/objects/Contact/fields/ContactExternalID__c.field-meta.xml
<CustomField>
    <fullName>ContactExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ContactExternalID</label>
    <length>38</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>