PROD_10-24-19/force-app/main/default/objects/Contact/fields/ContactRecordIDCaseInsensitive__c.field-meta.xml
<CustomField>
    <fullName>ContactRecordIDCaseInsensitive__c</fullName>
    <description>Salesforce Contact Identification</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salesforce Contact Identification</inlineHelpText>
    <label>ContactRecordIDCaseInsensitive</label>
    <type>Text</type>
</CustomField>