PROD_10-24-19/force-app/main/default/objects/Contact/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <label>Dietary Restrictions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>