PROD_10-24-19/force-app/main/default/objects/Contact/fields/DX_Email__c.field-meta.xml
<CustomField>
    <fullName>DX_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>DX Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>