PROD_10-24-19/force-app/main/default/objects/Contact/fields/Email_Last_updated_date__c.field-meta.xml
<CustomField>
    <fullName>Email_Last_updated_date__c</fullName>
    <label>Email Last updated date</label>
    <type>Date</type>
</CustomField>