PROD_10-24-19/force-app/main/default/objects/Contact/fields/Email_prior_value__c.field-meta.xml
<CustomField>
    <fullName>Email_prior_value__c</fullName>
    <label>Prior Email</label>
    <type>Email</type>
</CustomField>