PROD_10-24-19/force-app/main/default/objects/Contact/fields/ETMC_Retail__c.field-meta.xml
<CustomField>
    <fullName>ETMC_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETMC_Retail</label>
    <type>Checkbox</type>
</CustomField>