PROD_10-24-19/force-app/main/default/objects/Contact/fields/ETMC_Sold_Announcements__c.field-meta.xml
<CustomField>
    <fullName>ETMC_Sold_Announcements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETMC_Sold Announcements</label>
    <type>Checkbox</type>
</CustomField>