PROD_10-24-19/force-app/main/default/objects/Contact/fields/External_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Full_Name__c</fullName>
    <description>For use with Pardot Imports</description>
    <label>External Full Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>