PROD_10-24-19/force-app/main/default/objects/Contact/fields/External_Invest_1st_name__c.field-meta.xml
<CustomField>
    <fullName>External_Invest_1st_name__c</fullName>
    <description>For use with Pardot Imports</description>
    <label>External Invest 1st name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>