PROD_10-24-19/force-app/main/default/objects/Contact/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>CASE( 
Contact_Status__c, 
&quot;Active&quot;, IMAGE (&quot;/resource/1494353630000/GraphicsPackNew/fatcow/farmfresh/16/accept.png&quot;, &quot;Active&quot;), 
&quot;Validated&quot;, IMAGE (&quot;/resource/1494353630000/GraphicsPackNew/fatcow/farmfresh/16/accept.png&quot;, &quot;Active&quot;), 
&quot;&quot;, IMAGE (&quot;/resource/1494353630000/GraphicsPackNew/fatcow/farmfresh/16/flag_1.png&quot;, &quot;Active&quot;), 
&quot;Inactive&quot;, IMAGE (&quot;/resource/1494343076000/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;, &quot;Inactive&quot;), 
&quot;No Longer w/ Company&quot;, IMAGE (&quot;/resource/1494343076000/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;, &quot;Inactive&quot;), 
&quot;Retired / Inactive&quot;, IMAGE (&quot;/resource/1494343076000/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;, &quot;Inactive&quot;), 
&quot;To Be Merged&quot;, IMAGE (&quot;/resource/1494343076000/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;, &quot;Inactive&quot;), 
&quot;To Be Deleted&quot;, IMAGE (&quot;/resource/1494343076000/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;, &quot;Inactive&quot;), 
IMAGE (&quot;/resource/1494343076000/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;, &quot;Inactive&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>