PROD_10-24-19/force-app/main/default/objects/Contact/fields/Infra_Contact__c.field-meta.xml
<CustomField>
    <fullName>Infra_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infra Contact</label>
    <type>Checkbox</type>
</CustomField>