PROD_10-24-19/force-app/main/default/objects/Contact/fields/Infra_Primary_CRM__c.field-meta.xml
<CustomField>
    <fullName>Infra_Primary_CRM__c</fullName>
    <formula>Account.PFG_CRM_Real_Asset_Lead__r.Full_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infra Primary CRM</label>
    <type>Text</type>
</CustomField>