PROD_10-24-19/force-app/main/default/objects/Contact/fields/Internal_Group_Role__c.field-meta.xml
<CustomField>
    <fullName>Internal_Group_Role__c</fullName>
    <label>Internal Group Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>PMT</fullName>
            </value>
            <value>
                <fullName>Fund Teams</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Fin Ops</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>SMP</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>