PROD_10-24-19/force-app/main/default/objects/Contact/fields/Invited_By_Private_Funds__c.field-meta.xml
<CustomField>
    <fullName>Invited_By_Private_Funds__c</fullName>
    <description>Hidden from the page layout, this field is used for Integration with CVENT</description>
    <inlineHelpText>Hidden from the page layout, this field is used for Integration with CVENT</inlineHelpText>
    <label>Invite Sent From - CVENT TEXT</label>
    <length>200</length>
    <type>Text</type>
</CustomField>