PROD_10-24-19/force-app/main/default/objects/Contact/fields/IR_Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>IR_Relationship_Notes__c</fullName>
    <label>IR Relationship Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>