PROD_10-24-19/force-app/main/default/objects/Contact/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <description>URL to the Contact&#39;s LinkedIn profile</description>
    <inlineHelpText>URL to the Contact&#39;s LinkedIn profile</inlineHelpText>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>