PROD_10-24-19/force-app/main/default/objects/Contact/fields/LPAC_Member__c.field-meta.xml
<CustomField>
    <fullName>LPAC_Member__c</fullName>
    <description>for roll up helper</description>
    <inlineHelpText>for roll up helper</inlineHelpText>
    <label>LPAC Member</label>
    <type>TextArea</type>
</CustomField>