PROD_10-24-19/force-app/main/default/objects/Contact/fields/Notes_New__c.field-meta.xml
<CustomField>
    <fullName>Notes_New__c</fullName>
    <description>Collective Notes field from all previous Notes</description>
    <inlineHelpText>Contact Notes</inlineHelpText>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>