PROD_10-24-19/force-app/main/default/objects/Contact/fields/PFG_Events__c.field-meta.xml
<CustomField>
    <fullName>PFG_Events__c</fullName>
    <description>List of the regular events that PFG hosts</description>
    <inlineHelpText>List of the regular events that PFG hosts.  Additions should be requested to the Marketing team.</inlineHelpText>
    <label>PFG Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia Seminar</fullName>
            </value>
            <value>
                <fullName>Copenhagen Seminar</fullName>
            </value>
            <value>
                <fullName>Investor Conference</fullName>
            </value>
            <value>
                <fullName>Investor Day Dinner</fullName>
            </value>
            <value>
                <fullName>LA Seminar</fullName>
            </value>
            <value>
                <fullName>London Breakfast Seminar</fullName>
            </value>
            <value>
                <fullName>Seoul Seminar</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Tokyo Seminar</fullName>
            </value>
            <value>
                <fullName>Zurich Seminar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>