PROD_10-24-19/force-app/main/default/objects/Contact/fields/PFG_Reference__c.field-meta.xml
<CustomField>
    <fullName>PFG_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if the contact can be used as a PFG Reference.</inlineHelpText>
    <label>PFG Reference</label>
    <type>Checkbox</type>
</CustomField>