PROD_10-24-19/force-app/main/default/objects/Contact/fields/Phone_Number_Last_Updated_by__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Last_Updated_by__c</fullName>
    <label>Phone Number Last Updated by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>