PROD_10-24-19/force-app/main/default/objects/Contact/fields/Phone_Number_Last_Updated_date__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Last_Updated_date__c</fullName>
    <label>Phone Number Last Updated date</label>
    <type>Date</type>
</CustomField>