PROD_10-24-19/force-app/main/default/objects/Contact/fields/Prior_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Prior_Account_Name__c</fullName>
    <label>Prior Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>