PROD_10-24-19/force-app/main/default/objects/Contact/fields/Private_Equity_Lead_1st_Name__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity_Lead_1st_Name__c</fullName>
    <formula>Account.PFG_CRM_Secondary__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Private Equity Lead 1st Name</label>
    <type>Text</type>
</CustomField>