PROD_10-24-19/force-app/main/default/objects/Contact/fields/Private_Investor_Day_Comments__c.field-meta.xml
<CustomField>
    <fullName>Private_Investor_Day_Comments__c</fullName>
    <label>Comments-Private Investor Day</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>