PROD_10-24-19/force-app/main/default/objects/Contact/fields/Private_Investor_Day_Invitee_Type__c.field-meta.xml
<CustomField>
    <fullName>Private_Investor_Day_Invitee_Type__c</fullName>
    <inlineHelpText>Select which invitation this contact should receive.  If someone should be removed from the list, select that value to maintain the history.</inlineHelpText>
    <label>Invitee Type-Private Investor Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>