PROD_10-24-19/force-app/main/default/objects/Contact/fields/PSGCompany__c.field-meta.xml
<CustomField>
    <fullName>PSGCompany__c</fullName>
    <formula>BIM_Marketing_Lead__r.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSGCompany</label>
    <type>Text</type>
</CustomField>