PROD_10-24-19/force-app/main/default/objects/Contact/fields/Public_Investor_Day_Attended_Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Public_Investor_Day_Attended_Last_Event__c</fullName>
    <description>Field Name is change</description>
    <inlineHelpText>This field was previously called Attended Last Event-Public Investor Day.</inlineHelpText>
    <label>IR Day 2018 Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Yes - 2016</fullName>
            </value>
            <value>
                <fullName>No - 2016</fullName>
            </value>
            <value>
                <fullName>Yes - 2015</fullName>
            </value>
            <value>
                <fullName>No - 2015</fullName>
            </value>
            <value>
                <fullName>Yes - 2017</fullName>
            </value>
            <value>
                <fullName>No -  2017</fullName>
            </value>
            <value>
                <fullName>Yes - 2018</fullName>
            </value>
            <value>
                <fullName>No -  2018</fullName>
            </value>
            <value>
                <fullName>Yes - 2019</fullName>
            </value>
            <value>
                <fullName>No -  2019</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>