PROD_10-24-19/force-app/main/default/objects/Contact/fields/Public_Investor_Day_Invite_Sent_From__c.field-meta.xml
<CustomField>
    <fullName>Public_Investor_Day_Invite_Sent_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>not on the page layout</description>
    <label>Invite Sent From-Public Investor Day</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts4</relationshipName>
    <type>Lookup</type>
</CustomField>