PROD_10-24-19/force-app/main/default/objects/Contact/fields/Public_Investor_Day_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Public_Investor_Day_Meetings__c</fullName>
    <label>Meetings-Public Investor Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAM</fullName>
            </value>
            <value>
                <fullName>BIP</fullName>
            </value>
            <value>
                <fullName>BPY</fullName>
            </value>
            <value>
                <fullName>BEP</fullName>
            </value>
            <value>
                <fullName>BBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>