PROD_10-24-19/force-app/main/default/objects/Contact/fields/Real_Estate_Lead_1st_Name__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Lead_1st_Name__c</fullName>
    <formula>Account.PFG_CRM_Primary_Lead__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Estate Lead 1st Name</label>
    <type>Text</type>
</CustomField>