PROD_10-24-19/force-app/main/default/objects/Contact/fields/Real_Estate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Lead__c</fullName>
    <formula>Account.PFG_CRM_Primary_Lead__r.Full_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Estate Lead</label>
    <type>Text</type>
</CustomField>